<resources>
    <string name="app_name">JetPack App</string>
    <string name="title_collections">Module Title</string>
    <string name="KoinActivity">KoinActivity</string>
    <string name="LifeCycle">LifeCycle</string>
    <string name="LiveData">LiveData</string>
    <string name="Material">Material</string>
    <string name="BackUp">BackUp</string>
    <string name="Delete">Delete</string>
    <string name="Settings">Settings</string>
    <string name="Todo">To Use</string>
    <string name="DrawerLayout">DrawerLayout</string>
    <string name="Fruit">Fruit</string>
    <string name="Animal">Animal</string>
    <string name="AddNum">+ 1</string>
    <string name="SubNum">- 1</string>
    <string name="ClearNum">set 0</string>
    <string name="Minebbs">MineBBS</string>
    <string name="Pixabay">Pixabay</string>
    <string name="CustomView">CustomView</string>
    <string name="BaiduImage">BaiduImage Project</string>
    <string name="Download">Download</string>
    <string name="addImage">添加图片 —> 入库</string>
    <string name="ImageAndVideo">图片和视频</string>
    <string name="TakrPicture">拍照</string>
    <string name="Search">搜 索</string>
    <string name="Image_approximation_float">图片相似值为 : %f</string>
    <string name="Image_approximation_int">图片特征点个数为 : %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>