<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_koinActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/KoinActivity"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_lifecycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/LifeCycle"
            android:textAllCaps="false"
            android:theme="@style/Theme.JetPackApp"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_livedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:insetTop="5dp"
            android:insetBottom="5dp"
            android:text="@string/LiveData"
            android:textAllCaps="false"
            app:backgroundTint="@color/purple_200"
            app:cornerRadius="999dp"
            app:rippleColor="@color/purpleDark"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/purple_200"
            android:text="@string/Material"
            android:textAllCaps="false"
            app:cornerRadius="999dp"
            app:rippleColor="@color/purpleDark"
            app:strokeColor="@color/purple_200" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/purple_200"
            android:text="@string/Navigation"
            android:textAllCaps="false"
            app:cornerRadius="999dp"
            app:rippleColor="@color/purpleDark"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />

    </LinearLayout>

</ScrollView>
